# Essential-C

./: .gitignore
fifth/: CmakeLists.txt
fifth/include/: ex5_1.h  ex5_2.h
fifth/src/: main.cpp
first/: CmakeLists.txt  TutorialConfig.h.in  ex1_1.cpp  ex1_5_1.cpp  ex1_6.cpp  ex1_7.cpp  hello.txt  sorted.txt
fourth/: CmakeLists.txt
fourth/include/: ex4_3.h  ex4_4.h  ex4_5.h  static.cpp  static.h
fourth/src/: ex4_4.cpp  ex4_5.cpp  main.cpp
second/: CmakeLists.txt
second/MathFunctions/: CMakeLists.txt  MathFunctions.cpp  MathFunctions.h  mysqrt.cxx  mysqrt.h
second/include/: ex2_2.h  ex2_4.h  ex2_6.h
third/: CmakeLists.txt
third/include/: ex3_1.h  ex3_2.h  ex3_3.h  ex3_4.h
third/src/: ex3_1.cpp  ex3_3.cpp  ex3_4.cpp  main.cpp
